# opencat

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  INTERVIEW_QA.md  README.md  README_CN.md  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts
docs/: opencat-architecture-interview-cn.html  opencat-architecture-interview-cn.md
prisma/: schema.prisma
scripts/: export-architecture-pdf.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/register/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/chat/: page.tsx
src/app/(dashboard)/dashboard/: page.tsx
src/app/(dashboard)/settings/: page.tsx
src/app/api/agents/: route.ts
src/components/chat/: agent-selector.tsx  chat-input.tsx  chat-panel.tsx  markdown.tsx  message-item.tsx  message-list.tsx  model-selector.tsx
src/components/dashboard/: activity-table.tsx  donut-chart.tsx  index.ts  line-chart.tsx  stat-card.tsx
src/components/layout/: sidebar.tsx  theme-provider.tsx  theme-toggle.tsx
src/lib/: auth.ts  crypto.ts  utils.ts
src/lib/agent/: index.ts  react-engine.ts
src/lib/i18n/: en.ts  index.ts  zh.ts
src/lib/llm/: index.ts  registry.ts  types.ts
src/lib/memory/: embedding.ts  index.ts  rag.ts  store.ts
src/lib/tools/: index.ts  registry.ts  types.ts
src/server/db/: index.ts
src/stores/: chat.ts  theme.ts
src/types/: next-auth.d.ts
(+23 files in other folders)
